--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Codec — A visual merchandising production partner</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -25,17 +25,24 @@
                         <h1 class="h4 header__logo">
                             <a href="#"><span class="header__name">Codec</span></a>
                         </h1>
-                        <span class="small-text header__description">A visual merchandising<br>production partner.</span>
+                        <span class="small-text header__description">A visual merchandising<br>production partner</span>
                     </header>
                     <nav>
                         <ul>
-                            <li><a>About</a></li>
-                            <li><a>Capacities</a></li>
-                            <li><a>Capabilities</a></li>
+                            <li><a>About Us</a></li>
+                            <li><a>Services</a></li>
+                            <li><a>Work</a></li>
+                            <li><a>Contact</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="content">
+                <div class="content--home">
+                    <div class="grid">
+                        <div class="grid-sizer"></div>
+                        <div class="grid-item"><img src="http://placehold.it/300x300" /></div>
+                        <div class="grid-item"><img src="http://placehold.it/300x500" /></div>
+                        <div class="grid-item"><img src="http://placehold.it/300x300" /></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -44,6 +51,8 @@
         <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.1.4.min.js"><\/script>')</script>
         <script src="https://use.typekit.net/icw4kex.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
+        <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+        <script src="assets/js/vendor/masonry.pkgd.min.js"></script>
         <!-- JavaScript -->
         <script src="assets/js/main.js"></script>
     </body>
