Fixed home link

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <div class="sidebar">
                     <header>
                         <h1 class="h4 header__logo">
-                            <a href="/"><span class="header__name">Codec</span></a>
+                            <a href="index.html"><span class="header__name">Codec</span></a>
                         </h1>
                         <span class="small-text header__description is-serif">Visual Merchandising Reimagined</span>
                     </header>
