Added loading bar

--- a/about.html
+++ b/about.html
@@ -25,14 +25,15 @@
                         <h1 class="h4 header__logo">
                             <a href="index.html"><span class="header__name">Codec</span></a>
                         </h1>
-                        <span class="small-text header__description is-serif">Visual Merchandising Reimagined</span>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="about.html" class="is-active">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="services.html">Resources</a></li>
+                            <li><a href="about.html" class="is-active">About Us</a></li>
+                            <li><a href="contact.html">Support</a></li>
+                            <br />
+                            <li><a href="portfolio.html">A Quick Look</a></li>
+                            <li><a href="join.html">Join Codec</a></li>
                         </ul>
                     </nav>
                 </div>
