--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Codec — A visual merchandising production partner</title>
+        <title>Codec</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -26,14 +26,15 @@
                         <h1 class="h4 header__logo">
                             <a href="index.html"><span class="header__name">Codec</span></a>
                         </h1>
-                        <span class="small-text header__description is-serif">Visual Merchandising Reimagined</span>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="services.html">Resources</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="contact.html">Support</a></li>
+                            <br />
+                            <li><a href="portfolio.html">A Quick Look</a></li>
+                            <li><a href="join.html">Join Codec</a></li>
                         </ul>
                     </nav>
                 </div>
