--- a/portfolio.html
+++ b/portfolio.html
@@ -25,18 +25,23 @@
                         <h1 class="h4 header__logo">
                             <a href="index.html"><span class="header__name">Codec</span></a>
                         </h1>
-                        <span class="small-text header__description is-serif">Visual Merchandising Reimagined</span>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="portfolio.html" class="is-active">Portfolio</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="services.html">Resources</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="contact.html">Support</a></li>
+                            <br />
+                            <li><a href="portfolio.html" class="is-active">A Quick Look</a></li>
+                            <li><a href="join.html">Join Codec</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="content content--portfolio">
+                    <div class="content__navigation">Home > A Quick Look at Codec</div>
+                    <div class="content__navigation-load">
+                        <div class="load" data-percent="100"></div>
+                    </div>
                     <div class="grid">
                         <div class="grid-sizer"></div>
                         <div class="grid-item"><img src="http://placehold.it/300x300" /></div>
