--- a/services.html
+++ b/services.html
@@ -25,19 +25,26 @@
                         <h1 class="h4 header__logo">
                             <a href="index.html"><span class="header__name">Codec</span></a>
                         </h1>
-                        <span class="small-text header__description is-serif">Visual Merchandising Reimagined</span>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html" class="is-active">Services</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="services.html" class="is-active">Resources</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="contact.html">Support</a></li>
+                            <br />
+                            <li><a href="portfolio.html">A Quick Look</a></li>
+                            <li><a href="join.html">Join Codec</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="content content--services">
-                    <img src="http://placehold.it/1000x500">
+                    <div class="content__navigation"><a href="/">Home</a> > 
+                        <span class="is-active">Resources</span>
+                    </div>
+                    <div class="content__navigation-load">
+                        <div class="load" data-percent="100"></div>
+                    </div>
+                    <!--<img src="http://placehold.it/1000x350">
                     <div class="service--learn">
                         <ul class="small-text">Learn More</ul>
                             <p class="is-inactive">Choose a feature to learn more about our services.</p>
@@ -56,8 +63,9 @@
                             <li>Production Partners</li>
                             <li>Warehouse</li>
                         </ul>
-                    </div>
-                    
+                    </div>-->
+                    <h3>Get Started</h3>
+
                 </div>
             </div>
         </div>
