Added new content and layout

--- a/about.html
+++ b/about.html
@@ -38,12 +38,20 @@
                     </nav>
                 </div>
                 <div class="content content--about">
+                    <div class="content__navigation"><a href="/">Home</a> > 
+                        <span class="is-active">About Us</span>
+                    </div>
+                    <div class="content__navigation-load">
+                        <div class="load" data-percent="100"></div>
+                    </div>
                     <div class="about__description">
                         <h5 class="h2">Making beautiful <span class="is-gold">real</span>.</h5>
-                        <h1>About Codec</h2>
-                        <p>For the past 2 years, Codec has been producing visual merchandising display tools and windows for the luxury and fashion sectors. With an influential list of international clients, Codec’s unique approach in tackling production challenges continues to inspire clients around the world, and influence production partners working with us.</p>
-                        <p>Codec’s dedication to achieving workable solutions beyond its clients' imagination is what sets it apart. Today, Codec’s value is reflected in its ability to tackle the task of blending sophisticated engineering with its clients’ modern aesthetics. With over 40 different projects under its belt, Codec has manufactured over 50,000 pieces of goods for many prestigious brands around the world.</p>
-                        <p>
+                        <h2 class="h4">What does Codec do?</h2>
+                        <p>Codec is an engineering firm that specializes in the production of visual merchandising for luxury retailers. Our solutions are exquisitely engineered to create visual impact and drive sales.</p>
+                        <img src="http://placehold.it/500x200" />
+                        <span class="img-caption">Codec is an engineering firm that specializes in the production of visual merchandising for luxury retailers.</span>
+                        <h2 class="h4">What makes Codec different?</h2>
+                        <p>Codec has a combination of experience, expertise and attention to detail that is unparal- leled in the industry. Our ability to understand the critical details of a project is what allows us to take on seemingly impossible missions with success.</p>
                     </div>
                 </div>
             </div>
