--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,17 @@
                     </nav>
                 </div>
                 <div class="content content--contact">
+                <div class="content__navigation"><a href="/">Home</a> > 
+                        <span class="is-active">Support</span>
+                    </div>
+                    <div class="content__navigation-load">
+                        <div class="load" data-percent="100"></div>
+                    </div>
                     <div class="contact__form">
                         <h1 class="h2">Codec is here to help.</h1>
-                        <p>Have a question? File a ticket and our support team will respond as soon as possible.</p>
+                        <p>File a ticket below to contact our support team.</p>
+                        <p>Be sure to check out our <a href="services.html">resources</a> section as well.</p>
+                        <p>Sincerely,<br />CODEC Support Team</p>
                         <form>
                             <input type="text" placeholder="First Name">
                             <input type="text" placeholder="Last Name">
