--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,9 @@
                     </nav>
                 </div>
                 <div class="content content--portfolio">
-                    <div class="content__navigation">Home > A Quick Look at Codec</div>
+                    <div class="content__navigation"><a href="/">Home</a> > 
+                        <span class="is-active">A Quick Look at Codec</span>
+                    </div>
                     <div class="content__navigation-load">
                         <div class="load" data-percent="100"></div>
                     </div>
