--- a/services.html
+++ b/services.html
@@ -44,28 +44,42 @@
                     <div class="content__navigation-load">
                         <div class="load" data-percent="100"></div>
                     </div>
-                    <!--<img src="http://placehold.it/1000x350">
-                    <div class="service--learn">
-                        <ul class="small-text">Learn More</ul>
-                            <p class="is-inactive">Choose a feature to learn more about our services.</p>
+                    <img src="http://placehold.it/1000x250" />
+                    <div class="accordion">
+                        <h2>Get Started</h2>
+                        <ul>
+                          <li>
+                            <input type="checkbox" checked>
+                            <i></i>
+                            <h3>Request A Sample</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                          </li>
+                          <li>
+                            <input type="checkbox" checked>
+                            <i></i>
+                            <h3>Need Logistic Support</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                          </li>
+                          <li>
+                            <input type="checkbox" checked>
+                            <i></i>
+                            <h3>Tailor Made One-Off Request</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                          </li>
+                          <li>
+                            <input type="checkbox" checked>
+                            <i></i>
+                            <h3>Request for Quotation</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                          </li>
+                          <li>
+                            <input type="checkbox" checked>
+                            <i></i>
+                            <h3>Request Production References from Codec</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                          </li>
                         </ul>
                     </div>
-                    <div class="service--capabilities">
-                        <ul class="small-text">Capabilities</ul>
-                            <li>Research &amp; Development</li>
-                            <li>Tailor-Made Production</li>
-                            <li>Global Roll-Out</li>
-                        </ul>
-                    </div>
-                    <div class="service--capacities">
-                        <ul class="small-text">Capacities</ul>
-                            <li>Factory</li>
-                            <li>Production Partners</li>
-                            <li>Warehouse</li>
-                        </ul>
-                    </div>-->
-                    <h3>Get Started</h3>
-
                 </div>
             </div>
         </div>
