--- a/about.html
+++ b/about.html
@@ -18,40 +18,42 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container--black">
+        <div class="container">
             <div class="container__content">
                 <div class="sidebar">
                     <header>
                         <h1 class="h4 header__logo">
-                            <a href="index.html"><span class="header__name">Codec</span></a>
+                            <a href="index.html" class="nav__home"><span class="header__name">Codec</span></a>
                         </h1>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html">Resources</a></li>
-                            <li><a href="about.html" class="is-active">About Us</a></li>
-                            <li><a href="contact.html">Support</a></li>
+                            <li><a href="services.html" id="nav__resources">Resources</a></li>
+                            <li><a href="about.html" id="nav__about">About Us</a></li>
+                            <li><a href="contact.html" id="nav__support">Support</a></li>
                             <br />
-                            <li><a href="portfolio.html">A Quick Look</a></li>
-                            <li><a href="join.html">Join Codec</a></li>
+                            <li><a href="portfolio.html" id="nav__quicklook">A Quick Look at Codec</a></li>
+                            <li><a href="join.html" id="nav__join">Join Codec</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="content content--about">
-                    <div class="content__navigation"><a href="/">Home</a> > 
-                        <span class="is-active">About Us</span>
-                    </div>
-                    <div class="content__navigation-load">
-                        <div class="load" data-percent="100"></div>
-                    </div>
-                    <div class="about__description">
-                        <h5 class="h2">Making beautiful <span class="is-gold">real</span>.</h5>
-                        <h2 class="h4">What does Codec do?</h2>
-                        <p>Codec is an engineering firm that specializes in the production of visual merchandising for luxury retailers. Our solutions are exquisitely engineered to create visual impact and drive sales.</p>
-                        <img src="http://placehold.it/500x200" />
-                        <span class="img-caption">Codec is an engineering firm that specializes in the production of visual merchandising for luxury retailers.</span>
-                        <h2 class="h4">What makes Codec different?</h2>
-                        <p>Codec has a combination of experience, expertise and attention to detail that is unparal- leled in the industry. Our ability to understand the critical details of a project is what allows us to take on seemingly impossible missions with success.</p>
+                <div id="ajax">
+                    <div class="content content--about">
+                        <div class="content__navigation"><a href="index.html" class="nav__home">Home</a> > 
+                            <span class="is-active">About Us</span>
+                        </div>
+                        <div class="content__navigation-load">
+                            <div class="load" data-percent="100"></div>
+                        </div>
+                        <div class="about__description">
+                            <h3 class="h2">Making beautiful <span class="is-gold">real</span>.</h5>
+                            <h2 class="h4">What does Codec do?</h2>
+                            <p>Codec is an engineering firm that specializes in the production of visual merchandising for luxury retailers. Our solutions are exquisitely engineered to create visual impact and drive sales.</p>
+                            <img src="http://placehold.it/500x200" />
+                            <span class="img-caption">Codec is an engineering firm that specializes in the production of visual merchandising for luxury retailers.</span>
+                            <h2 class="h4">What makes Codec different?</h2>
+                            <p>Codec has a combination of experience, expertise and attention to detail that is unparal- leled in the industry. Our ability to understand the critical details of a project is what allows us to take on seemingly impossible missions with success.</p>
+                        </div>
                     </div>
                 </div>
             </div>
