--- a/index.html
+++ b/index.html
@@ -15,41 +15,43 @@
         <script>document.documentElement.className += ' wf-loading';</script>
         <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-    <body id="home">
+    <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container--black">
+        <div class="container">
             <div class="container__content">
                 <div class="sidebar">
                     <header>
                         <h1 class="h4 header__logo">
-                            <a href="index.html"><span class="header__name">Codec</span></a>
+                            <a href="index.html" class="nav__home"><span class="header__name">Codec</span></a>
                         </h1>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html">Resources</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Support</a></li>
+                            <li><a href="services.html" id="nav__resources">Resources</a></li>
+                            <li><a href="about.html" id="nav__about">About Us</a></li>
+                            <li><a href="contact.html" id="nav__support">Support</a></li>
                             <br />
-                            <li><a href="portfolio.html">A Quick Look</a></li>
-                            <li><a href="join.html">Join Codec</a></li>
+                            <li><a href="portfolio.html" id="nav__quicklook">A Quick Look at Codec</a></li>
+                            <li><a href="join.html" id="nav__join">Join Codec</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="content content--home">
-                    <ul id="slider">
-                        <li>
-                            <a href="#slide1"><img src="http://placehold.it/800x500" alt="Image 1"></a>
-                        </li>
-                        <li>
-                            <a href="#slide2"><img src="http://placehold.it/800x500"  alt="Image 2"></a>
-                        </li>
-                        <li>
-                            <a href="#slide3"><img src="http://placehold.it/800x500" alt="Image 3"></a>
-                        </li>
-                    </ul>
+                <div id="ajax">
+                    <div class="content content--home">
+                        <ul id="slider">
+                            <li>
+                                <a href="#slide1"><img src="http://placehold.it/800x500" alt="Image 1"></a>
+                            </li>
+                            <li>
+                                <a href="#slide2"><img src="http://placehold.it/800x500"  alt="Image 2"></a>
+                            </li>
+                            <li>
+                                <a href="#slide3"><img src="http://placehold.it/800x500" alt="Image 3"></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -59,6 +61,8 @@
         <script src="https://use.typekit.net/icw4kex.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         <script src="assets/js/vendor/slippry.min.js"></script>
+        <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+        <script src="assets/js/vendor/masonry.pkgd.min.js"></script>
         <!-- JavaScript -->
         <script src="assets/js/main.js"></script>
     </body>
