--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container--black">
+        <div class="container">
             <div class="container__content">
                 <div class="sidebar">
                     <header>
@@ -37,48 +37,35 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="content content--services">
-                    <div class="content__navigation"><a href="/">Home</a> > 
-                        <span class="is-active">Resources</span>
-                    </div>
-                    <div class="content__navigation-load">
-                        <div class="load" data-percent="100"></div>
-                    </div>
-                    <img src="http://placehold.it/1000x250" />
-                    <div class="accordion">
-                        <h2>Get Started</h2>
-                        <ul>
-                          <li>
-                            <input type="checkbox" checked>
-                            <i></i>
-                            <h3>Request A Sample</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
-                          </li>
-                          <li>
-                            <input type="checkbox" checked>
-                            <i></i>
-                            <h3>Need Logistic Support</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
-                          </li>
-                          <li>
-                            <input type="checkbox" checked>
-                            <i></i>
-                            <h3>Tailor Made One-Off Request</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
-                          </li>
-                          <li>
-                            <input type="checkbox" checked>
-                            <i></i>
-                            <h3>Request for Quotation</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
-                          </li>
-                          <li>
-                            <input type="checkbox" checked>
-                            <i></i>
-                            <h3>Request Production References from Codec</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
-                          </li>
-                        </ul>
+                <div id="ajax">
+                    <div class="content content--services">
+                        <div class="content__navigation"><a href="/">Home</a> > 
+                            <span class="is-active">Resources</span>
+                        </div>
+                        <div class="content__navigation-load">
+                            <div class="load" data-percent="100"></div>
+                        </div>
+                        <img src="http://placehold.it/1000x350" />
+                        <div class="accordion">
+                            <div class="accordion__title">
+                                <h2>Get Started</h2>
+                                <a class="accordion__expand" href="#">Expand All</a>
+                            </div>
+                            <div class="accordion__section">
+                                <a class="accordion__section--title" href="#accordion__request">Request A Sample</a>
+                                <div id="accordion__request" class="accordion__content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                                </div>
+                                <i></i>
+                            </div>
+                            <div class="accordion__section">
+                                <a class="accordion__section--title" href="#accordion__logistics">Need Logistic Support</a>
+                                <div class="accordion__content" id="accordion__logistics">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat mi mauris, vel viverra felis tempor varius. Integer id tempus orci. Nunc egestas mauris lectus, sed pellentesque lacus malesuada a. Donec pretium mi nisl, et varius leo commodo non. Donec porttitor nulla vitae erat tristique vestibulum vitae sed ipsum. Donec vel quam id urna ultricies porttitor. Curabitur laoreet neque purus, sit amet sollicitudin nisl venenatis nec. Phasellus ultrices vulputate nisi. Etiam sagittis feugiat ligula nec fermentum.</p>
+                                </div>
+                                <i></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
