--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <li><a href="contact.html" id="nav__support">Support</a></li>
                             <br />
                             <li><a href="portfolio.html" id="nav__quicklook">A Quick Look at Codec</a></li>
-                            <li><a href="join.html" id="nav__join">Join Codec</a></li>
+                            <li><a href="join.html" id="nav__join">Join the Team</a></li>
                         </ul>
                     </nav>
                 </div>
