--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
                             <li><a href="contact.html">Support</a></li>
                             <br />
                             <li><a href="portfolio.html">A Quick Look</a></li>
-                            <li><a href="join.html">Join Codec</a></li>
+                            <li><a href="join.html">Join the Team</a></li>
                         </ul>
                     </nav>
                 </div>
