--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <div class="sidebar">
                     <header>
                         <h1 class="h4 header__logo">
-                            <a href="index.html" class="nav__home"><span class="header__name">Codec</span></a>
+                            <a href="index.html" class="nav__home" id="home"><span class="header__name">Codec</span></a>
                         </h1>
                     </header>
                     <nav>
                         <ul>
-                            <li><a href="services.html" id="nav__resources">Resources</a></li>
-                            <li><a href="about.html" id="nav__about">About Us</a></li>
-                            <li><a href="contact.html" id="nav__support">Support</a></li>
+                            <li><a href="services.html" id="resources">Resources</a></li>
+                            <li><a href="about.html" id="about">About Us</a></li>
+                            <li><a href="contact.html" id="support">Support</a></li>
                             <br />
-                            <li><a href="portfolio.html" id="nav__quicklook">A Quick Look at Codec</a></li>
-                            <li><a href="join.html" id="nav__join">Join the Team</a></li>
+                            <li><a href="portfolio.html" id="quicklook">A Quick Look at Codec</a></li>
+                            <li><a href="join.html" id="join">Join the Team</a></li>
                         </ul>
                     </nav>
                 </div>
